# flask-shadowdom-fetchapi

./: README.md  pyproject.toml
src/flask_shadowdom_fetchapi_example/: __init__.py  app.py
src/flask_shadowdom_fetchapi_example/routes/: api.py  static.py
src/flask_shadowdom_fetchapi_example/static/: index.js
src/flask_shadowdom_fetchapi_example/templates/: base.html  index.html
