[project]
name = "flask-shadowdom-fetchapi-example"
version = "0.1.0"
description = "Simple Flask, Shadow DOM, Fetch API Example"
authors = [
    { name = "Park, Jonghyeon", email = "belline0124@gmail.com" }
]
dependencies = [
    "flask>=3.0.3",
]
readme = "README.md"
requires-python = ">= 3.8"

[tool.rye.scripts]
"server" = "python ./src/flask_shadowdom_fetchapi_example/app.py"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/flask_shadowdom_fetchapi_example"]
